# duplicate_app

./: README.md  pyproject.toml
src/python_template/: __main__.py  config.py
